# BIOM

./: .cursorrules  .editorconfig  .env.example  .gitignore  .htaccess  Dockerfile  Makefile  README.md  client_secret_2_376170361680-1ebi4e8asioqgsp949lmvqoglohssm5r.apps.googleusercontent.com.json  copy_mongo.py  db.sqlite3  deploy.md  docker-compose.dev.yml  docker-compose.yml  env.py  main.py  package-lock.json  package.json  pyproject.toml  vite.config.mjs
.agent/workflows/: limitless-framework.md  make-commands.md  resource-usage.md  vvecon-framework.md
.github/workflows/: prod.yaml  qa.yml
admins/: apps.py  urls.py
admins/templates/: admin_base.html
admins/views/: AuthView.py  DataSetView.py  HomeView.py  PatientView.py  __init__.py
assets/: manifest.json
assets/assets/: explore-B-qxm5HA.js  test-RYlFryXy.js
authentication/: apps.py  urls.py
authentication/adapters/: SocialAccountAdapter.py  __init__.py
authentication/admin/: ChannelAdmin.py  DeviceAdmin.py  IceCastServerAdmin.py  PermissionAdmin.py  UserAdmin.py  __init__.py
authentication/enums/: DeviceType.py  Gender.py  __init__.py
authentication/managers/: UserManager.py  __init__.py
authentication/migrations/: 0001_initial.py  0002_alter_user_countrycode_alter_user_firstname_and_more.py  0002_user_profile.py  0003_device.py  0004_channel.py  0005_alter_channel_options_remove_channel_createdat_and_more.py  0006_alter_channel_options.py  0007_remove_channel_icecastmountpoint_and_more.py  0008_remove_user_fullname.py  0009_user_fullname.py  0010_alter_device_name.py
authentication/models/: Channel.py  Device.py  IceCastServer.py  User.py  __init__.py
authentication/scripts/: addProfilePermissions.py
authentication/services/: ChannelService.py  DeviceService.py  EmailService.py  IceCastServerService.py  SMSService.py  UserService.py  __init__.py
authentication/signals/: __init__.py  userAccountCreated.py
authentication/views/: V1Auth.py  V1Channel.py  V1Device.py  V1Profile.py  __init__.py
biom/: apps.py  db_router.py  urls.py
biom/admin/: BioMarkerAdmin.py  CountersAdmin.py  StudyAdmin.py  StudyResultAdmin.py  StudyVariableAdmin.py  UserAdmin.py  __init__.py
biom/migrations/: 0001_initial.py  0002_result.py
biom/models/: BioMarker.py  Counters.py  Study.py  StudyResult.py  StudyVariable.py  User.py  __init__.py
biom/services/: StudyService.py  __init__.py
biom/views/: V1Study.py  __init__.py
core/: apps.py  settings.py  urls.py
main/: apps.py  urls.py
main/admin/: BioMarkerAdmin.py  PatientAdmin.py  StudyAdmin.py  StudyResultAdmin.py  StudyVariableAdmin.py  StudyVariableAnswerAdmin.py  UserStudyAdmin.py  __init__.py
main/models/: Study.py  (+9 more)
media/: test_patients_sample2.csv
nginx/: yourdomain.conf
res/: Data.py  Files.py  Images.py  Theme.py  __init__.py
scripts/: entrypoint.sh
settings/: urls.py
static/: manifest.webmanifest
staticfiles/: manifest.json
test/: biom_to_auth_id_map.json  copy_mongo.py  create_auth_users.py  study_id_map.json  study_variable_id_map.json  transfer_biomarkers.py  transfer_studies.py  transfer_study_results.py  transfer_study_variables.py  userstudy_id_map.json
(+242 files in other folders)
